--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "primeicons": "^6.0.1",
-    "primereact": "^8.7.3"
+    "primereact": "^8.7.3",
+    "quill": "^1.3.7"
   },
   "description": "Based on [PrimeReact](https://www.primefaces.org/primereact)",
   "main": "main.js",
